2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php,
	include/functions_ui.php, include/functions_reporting.php,
	include/constants.php, include/ajax/reporting.ajax.php,
	include/ajax/agent.php, operation/agentes/ver_agente.php: fixed the
	graphs and the autocomplete.
	
	Fixes: #3606284

2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Update the fired
	counts on validate alerts function

	* include/functions_events.php
	include/functions_reporting.php
	include/javascript/jquery.pandora.js
	include/functions_treeview.php
	operation/tree.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_agente.php
	operation/search_agents.php: Improve and unify code
	of the status counts in agents list, agent detail, 
	tree view and search views

	* ajax.php: Load the user language in the
	ajax entry point. Until now the language was the
	general!

2013-03-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/functions_events.php
	include/constants.php
	operation/agentes/estado_generalagente.php
	operation/agentes/status_events.php
	operation/agentes/tactical.php
	operation/events/event_statistics.php
	operation/events/events_list.php
	operation/events/events.php: Improve layouts, graphic
	of events near tables, colors of events pies, acl tags,
	etc.

2013-03-01 Mario Pulido <mario.pulido@artica.es>

	* images/help/service1.png: New file for help.

	* godmode/tag/tag.php,
	godmode/agentes/agent_manager.php
	godmode/agentes/module_manager_editor_common.php: New hint help.

	* include/help/en/help_tags_config.php,
        include/help/en/help_agent_server.php,
        include/help/en/help_module_definition.php,
        include/help/en/help_view_services.php,
        include/help/es/help_module_definition.php,
        include/help/es/help_tags_config.php,
        include/help/es/help_agent_server.php: New and improved help files.

